# nail-booking-system

./: .env.example  .gitignore  .gitmessage  AUTOMATED_TEST_REPORT.md  CLAUDE.md  CLEANUP_COMPLETE.md  CORE_API_TEST_REPORT.md  CUSTOMER_FRONTEND_STATUS.md  CUSTOMER_MANAGEMENT_README.md  FRONTEND_FINAL_STATUS.md  MANUAL_TEST_REPORT.md  RBAC_SECURITY_TEST_REPORT.md  README.md  SPLIT_COMPLETE.md  STARTUP_SCRIPTS.md  TEST_REPORT.md  UV_SETUP.md  WEBPACK_ERROR_FIX.md  docker-compose.yml  init_db.py  main.py  monitor_resources.sh  nail_booking_system_design.md  package-lock.json  package.json  pyproject.toml  quick_start.sh  quick_verify.sh  requirements.txt  setup_database.sh  setup_postgresql.sh  start.sh  stop.sh
backend/: Makefile  README.md  TEST_SUMMARY.md  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_exclude_constraint.py  003_add_catalog_tables.py  004_add_merchant_tables.py  005_add_billing_tables.py  006_add_identity_tables.py  795b7f4e54e3_add_holidays_table.py  d895eb3524af_refactor_holidays_to_staff_holidays.py
backend/scripts/: add_system_admin.py  check_users.py  create_test_users.py  init_db.py  seed_data.py  test_rbac.py
backend/src/api/: main.py
backend/src/api/routers/: __init__.py  admin_router.py  billing_router.py  merchant_router.py  notification_router.py  public_router.py
backend/src/billing/application/: services.py
backend/src/billing/domain/: exceptions.py  models.py  repositories.py
backend/src/billing/infrastructure/orm/: models.py
backend/src/billing/infrastructure/repositories/: sqlalchemy_plan_repository.py  sqlalchemy_subscription_repository.py
backend/src/booking/application/: dtos.py  services.py
backend/src/booking/domain/: events.py  exceptions.py  models.py  repositories.py  value_objects.py
backend/src/booking/infrastructure/orm/: models.py
backend/src/booking/infrastructure/repositories/: sqlalchemy_booking_lock_repository.py  (+1 more)
backend/src/catalog/application/: services.py
backend/src/catalog/domain/: exceptions.py  holiday.py  models.py  repositories.py
backend/src/identity/application/: dtos.py  services.py
backend/src/identity/domain/: auth_service.py  exceptions.py  models.py  repositories.py
backend/src/identity/infrastructure/: dependencies.py
backend/src/merchant/application/: services.py
backend/src/merchant/domain/: exceptions.py  models.py  repositories.py
backend/src/notification/application/: event_handlers.py  services.py
backend/src/notification/domain/: exceptions.py  line_service.py  models.py
backend/src/shared/: config.py  database.py  dependencies.py  event_bus.py  exceptions.py  timezone.py
backend/tests/: conftest.py
backend/tests/features/: bookable_slots.feature  cancel_booking.feature  create_booking.feature
backend/tests/integration/: conftest.py  test_booking_flow.py  test_booking_lock_constraint.py  test_booking_repository.py  test_catalog_service.py  test_tenant_isolation.py
backend/tests/unit/billing/: test_subscription_model.py
backend/tests/unit/booking/: test_booking_model.py  test_value_objects.py
backend/tests/unit/catalog/: test_service_model.py  test_staff_model.py
backend/tests/unit/identity/: test_rbac.py  test_user_model.py
backend/tests/unit/merchant/: test_merchant_model.py
backend/tests/unit/notification/: test_notification_service.py
(+303 files in other folders)
