[project]
name = "nail-booking-system"
version = "1.0.0"
description = "多商家美甲預約系統"
authors = [{name = "Nail Booking Team", email = "team@nailbooking.com"}]
requires-python = ">=3.10.0,<3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "annotated-types==0.7.0",
    "bcrypt>=4.0.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography>=3.4.8",
    "exceptiongroup==1.3.0",
    "fastapi==0.117.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.0.0",
    "Pygments==2.19.2",
    "pytest==8.4.2",
    "PyJWT>=2.0.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.43",
    "starlette==0.48.0",
    "tomli==2.2.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "uvicorn==0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
